# ChangeLog for net-wireless/gr-osmosdr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/gr-osmosdr/ChangeLog,v 1.22 2014/07/25 05:00:25 zerochaos Exp $

  25 Jul 2014; Rick Farina <zerochaos@gentoo.org> gr-osmosdr-0.1.1.ebuild,
  gr-osmosdr-9999.ebuild, metadata.xml:
  adding bladerf support

  23 Jul 2014; Rick Farina <zerochaos@gentoo.org> -gr-osmosdr-0.1.0-r2.ebuild:
  removed outdated version

*gr-osmosdr-0.1.1 (06 Jul 2014)

  06 Jul 2014; Rick Farina <zerochaos@gentoo.org> +gr-osmosdr-0.1.1.ebuild,
  gr-osmosdr-9999.ebuild:
  version bump

*gr-osmosdr-0.1.0-r2 (16 Sep 2013)
*gr-osmosdr-0.0.2-r1 (16 Sep 2013)

  16 Sep 2013; Rick Farina <zerochaos@gentoo.org> +gr-osmosdr-0.0.2-r1.ebuild,
  +gr-osmosdr-0.1.0-r2.ebuild, -gr-osmosdr-0.0.1.ebuild,
  -gr-osmosdr-0.0.2.ebuild, -gr-osmosdr-0.1.0-r1.ebuild, gr-osmosdr-9999.ebuild:
  adding RTL_TCP support based on report from Dariusz Pelowski, removing old

*gr-osmosdr-0.1.0-r1 (08 Jul 2013)

  08 Jul 2013; Rick Farina <zerochaos@gentoo.org> +gr-osmosdr-0.1.0-r1.ebuild,
  -gr-osmosdr-0.1.0.ebuild:
  previous commits broke visibility rules (and likely build as well) so version
  bump to get things working in case people somehow managed to install
  previously

*gr-osmosdr-0.1.0 (07 Jul 2013)

  07 Jul 2013; Rick Farina <zerochaos@gentoo.org> +gr-osmosdr-0.1.0.ebuild,
  gr-osmosdr-0.0.2.ebuild:
  adding gr-3.7 compat version p.masked due to not detecting gr-iqbal

  01 Jul 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove redundant osmosdr useflag description

  25 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gr-osmosdr-0.0.1.ebuild, gr-osmosdr-0.0.2.ebuild, gr-osmosdr-9999.ebuild:
  Update gnuradio dependencies.

  23 Jun 2013; Rick Farina <zerochaos@gentoo.org> gr-osmosdr-9999.ebuild:
  fix conditional for 9999 requiring <=gr-3.7

  18 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>