@@ -7,7 +7,7 @@ IUSE=bladerf fcd hackrf iqbalance python rtlsdr uhd
 KEYWORDS=~amd64 ~arm ~x86
 LICENSE=GPL-3
 RDEPEND=>=net-wireless/gnuradio-3.7_rc:0=[fcd?] bladerf? ( net-wireless/bladerf:= ) hackrf? ( net-libs/libhackrf:= ) iqbalance? ( net-wireless/gr-iqbal:= ) rtlsdr? ( >=net-wireless/rtl-sdr-0.5.3:= ) uhd? ( net-wireless/uhd:= ) python? ( =dev-lang/python-2* )
-SLOT=0/0.1.1
-SRC_URI=https://dev.gentoo.org/~zerochaos/distfiles/gr-osmosdr-0.1.1.tar.xz
+SLOT=0/0.1.2
+SRC_URI=https://dev.gentoo.org/~zerochaos/distfiles/gr-osmosdr-0.1.2.tar.xz
 _eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=1249b930d2a9322f6c11956ad0ac3189
+_md5_=0c699726776f4c353d4217a3f701e96a
