@@ -3,25 +3,27 @@ Hash: SHA512
 
 DIST gr-osmosdr-0.0.2.tar.xz 120768 SHA256 f9e16210761de6e844b6618877f5ccb74f007d319a4b4ade1f5750ca9f279586 SHA512 2a425cbf41611084a1620c5aaec540432652280a6704a1c9d7fdb942721cd53fd10c5c0a8f099b76d4757f2bc92b38308bba3f10311876b99116634bffeb4df9 WHIRLPOOL c7da0d265029adada5c6ff251deb46cb7f212b5b29b94974bbb8c04a533f36bc92f2074e908500f3ce46b56572228c209d87eaae08873f6a7f2a1d046effe43c
 DIST gr-osmosdr-0.1.1.tar.xz 140604 SHA256 23b0c5551b3f0705fa24bab2e8e850a5cd108efe3f18c3d6e716f16da29b530e SHA512 bfbc07b5100b0ab164c189799f7ffc4570f84f3f74c6064efedc7aee0ca00f9b9cd40513c31fcd0d20bf3270679c9e2488db9850c0682a97c828e9b7acdc5366 WHIRLPOOL a58ee691ae118b1c93ff8f66ded3ea04fb56d343c9e1cfdcabd44186cf44f886c3c8e94641378af548947bfed47d0b314e82eb402282818c7de9dba3207ffb80
+DIST gr-osmosdr-0.1.2.tar.xz 141720 SHA256 508caeea327a64f870e591afbd736aaa3595020095488b163a2fbeacb4a0af19 SHA512 5422652e686912ed83e0d8291e6a31bd525626d595f03161e52297380056796dc1769f74f7054db5ae1c262bcc19ab04657ffd27c035376a26951ba0f0a9d545 WHIRLPOOL 8b2db727045256a0d4aab1817bd79e4d6112f8a588e8b9ef78348fad5e5b78b6ecf4f667ccda6cfe9423c07aefa1ece7e4732070f932c8b7a8911965eb072899
 EBUILD gr-osmosdr-0.0.2-r1.ebuild 1749 SHA256 84a011eeae61a5afd3c84a13ae6d40d3c026683ceadd81c60cce307643191365 SHA512 2bed2064caf9f04ab3b846561e32abdfbf197bcb1948e0a777fb5058c3c74522f3824e1ff8cb95e908494be32f2471227aa068c2408c721c60ced8f848c87fb1 WHIRLPOOL 60ab03c38ad19fc17027d964a0fc3bdf0d071cebe16c9b8e963fe21cb8897ca3731851ac9eccc1a9736cacefc39bb5fc333647b08b397341bc8aab1f05db0dd5
-EBUILD gr-osmosdr-0.1.1.ebuild 1920 SHA256 36e73dff82d511680305443eced65525494f8cb18c98a1ab5d9903fe7b808e06 SHA512 f07003383af190557196f84bbb484bc12e36e2ab807401d7de0d0a300c3a76f4da9e5011ccf3921ff8e9e25fdb8620bd6fc8118da4058919fb2881b6d2202fb9 WHIRLPOOL 18e284828799406168eacbd609986f681e2546f0da3e4d04dba3f4547f517b08c8c33561509d23001dea3b1bc2f52d97a683f0f0d2028afd60f2c621d8c10aa6
-EBUILD gr-osmosdr-9999.ebuild 1737 SHA256 0c8bf7b824e8f835b6da520830864eecf2cc6d7d1e63de531231cf9e23a870dc SHA512 9c907601dc709f57a4246b6ca79adb710cf33e74f49813634937f3402258babc6f664c019a821e7b5c775f32ba595426d52778b23d32910926fced717ed14b4c WHIRLPOOL 2753d68055fd9fa161cf11678d0ca47b988f65e897f51450a110903787e25126e1dbf75bb214bd541221d91834cf8b9fc460e1fc70ad9a01af094f013aaa41a0
-MISC ChangeLog 3871 SHA256 a39e80775223b263fedbf5428b00c62de98615078b4104bdb3b10bbeef72c0c0 SHA512 94b1358b2cbaa5457f398f41da7b5b9e66a6037e6a7061eb6e1b7209d43f95f8eb55469f020091b5eb83d7d10e6ba6ec34ad6f7348bdf3c6082e01599f1649a1 WHIRLPOOL 491de57c22010a5d3676f70e40fdad48c6503ba068e3a2a73d917cc178ab0c2bd829140a8ce2fd9c9c8cef916a5b696367cb77bf1a4c9f374786e539437d0dc3
+EBUILD gr-osmosdr-0.1.1.ebuild 1933 SHA256 b0c33c492c06115c9b691156d92ad596387573c5020c02c657dd26b4927ec6ec SHA512 c55ce13e3ed35993e78c43ac7bdda3d867cb8142327c4ec8030c665fa804e79d1d0b704bae6c3a0933770cff9a93727894730e8b927d67cc11f2435c3306af2f WHIRLPOOL a846fa3358715ce0ddb58996e2a97dce267a8babfaf603573f777ca86c50ace9c35e0d7a4a06ee1ed9f89cd31efaff0885a46366ce175ee884da4de33cb8d05a
+EBUILD gr-osmosdr-0.1.2.ebuild 1983 SHA256 32d7283510d1b9673a08239b39572ebc9fa4ba7142d74f9ad245f14908df2bb5 SHA512 286e8f9a85f8788e9362677c1ad1991ac9b0c54e400e4cbc1a837024c786f0c3a88dbd78ae4094817cef08d0d8cf020431380518baf2edca0a300dbbc8691088 WHIRLPOOL 59b258babe670f4fa7f4be48e98d9941a1433d5b13c9f7017000fc5fe5324cf836d063d34e3bd7e351c6e1a8eb767c4fda98e0f18c691921643c3145ee19b8b0
+EBUILD gr-osmosdr-9999.ebuild 1832 SHA256 f00d2a9544226036316146c5312854cfec9ebbc75521bacfe22c74a3c6292fd1 SHA512 f502cf311916bfc66e37a7c74ba0194041a475539cf2bdd4c2f2db5bdff4a912a2ff0666bf2dc47177eab22d4bcc5404a69b3a5926a425aae09eb42652ca61d5 WHIRLPOOL 6ac0f2e089f1a976e6d35cd85ae8fc2233f6641d0eb12ffafe6e52a2d71ab99225bae0d7786e7c2f9048f210135302233361d80e46b37675dba21fbd5c8787f9
+MISC ChangeLog 4047 SHA256 cabe2d7a9a8dbd1254617386eddd6a364961a26cb4c1f9e27bcb4dbe7cd7098f SHA512 9858501043a18e840007e5a653e138dd7d63c6280c15a74c20d88ad8dd44091a0ad9165d6699d9f512d6cd787c35718ab9b08f4ca5714f1a9cd66c569535fa7a WHIRLPOOL fbf9b46530a252ce222adeea72859da014b236887a91ee9f3c366f348683f77ff1df501a4aed9641f82245ecf6696fcc3417e8773af7f384878cc6eae7735e31
 MISC metadata.xml 676 SHA256 a3a4bd404e47b37e2c33f89cb4095f5a16decd1c4cd40c9884d3d1144545dea9 SHA512 75ccff0380eec65dcb6a59f5373a1ab2b3fd65df212429133289b678ffc6bedc96adb2b8f2e2053876475bc8dcf1338cbbb96f19d76c1fc03e9a4d7c81011993 WHIRLPOOL 2217cfde0f7b6929fc641ade6a638a2855684cf32e6c96e83852263cf13a0b9fffa7e02eeee87138c982f69366c7fe47e250ce6eb94c2825a2beb77d855fc0df
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCgAGBQJT0eVPAAoJEKXdFCfdEflK89QP/0dXNRJDAWUjluhImNejocXD
-ZYYLT/P7M1EG61D4SalAxFfhXKW6Z098KjQfWMP+GEdkyVF9oH3fP0IAkrKPs/VM
-UxTIZdP7II/dw6Tf9Y6wqzS9VNbmGizPSzJik6vjdyczLeM+qYm/5QeMSlle0FL7
-3TIIy3KImNEaI+0TOSZRfqZoJYzN40srP5u2c0TLoBX+k6zbeIsE3swD36F2DPtz
-p5UvaifU/m7DPI+QN2P+3uE476nbUjkYo/JIR1V4WnwAEKmcBDvkL8Nx6p1l/4kS
-stwgxC/QOeBRC8D5sxvQtl2+bNJtnjCZhNuaG2PTKyY/rNAv9oeBwzy9cHiq2nz5
-AH3HG+6HoVFx76POPYWgPrakohTil7Z2ZXwXttrBLQNElpMCL2Ns99PwcTSwketn
-rKmDEsLDv9s112E0zNXY3T6yqgtQNQimfbhG1tYO5KdwD2mi8jKSw5dHzGbBTjO7
-qyZ9XWlikciZlUrt4EckoZghI8UrGvhnHMeIwZRCBpCnTWI6Pu3IuNQe6dDv0oL5
-N/hRj6eL2go69hxvIS3Ro/0utw/t7DBekiyD7TMI7T2nTGWajIASCU9uavx8MyjF
-uGGSgz+olC7W27X4ayvLL4w6DlB/dvl8yftY9/b3QJaqNUZCgvUvyfoplq+5u6x6
-o+EKXOMnB7ERUShIsjLr
-=37UK
+iQIcBAEBCgAGBQJT/TWMAAoJEKXdFCfdEflKRxcP/1276Rd5m8HS++AdhSGRihHi
+tSte/TDszh54PT+riowjsn8+Qgl3+hzAg081XfntVqw389kLgYWmqvjPbS7WeNp/
+efMzhDp9xpZbzKCuhdSAxTmH3mFdjekEIReCLjQE3V/GIvtW3fQ9J0WO0CMWYDEa
+/pDTq24buo6+AbbBw5FDulJGhsS/es45aR8CScU/tCoQzW+kCYOMlhv4rNWsxshW
+UTq5Z0ut01BPIkbbAXHEgoAUV55ETVZVaAO5oVnNqTNEhcB2uIbogwaYeFh3WHsy
+sJTANWnD5X1sSL0dUCCIQaFr5PXyZlEqp6BXZdKyZFf8oeTo8s9OFscjD67jCxMC
+nhehH72HG/4thbUpbvxL9BB6UJAaMLW9E8jjG+Td34TPSVIFegx+VLgULMKB4w/R
+XgSnehYhR6JXmVO2N1wFqcJcUXHCxs+Jc5ypUSjZ/o7JHs3CJEshEtTTizVUYclh
+chR1c16fS/W3Of3+G03Gn/h8CC/O6RCKNh1y8Pyrrsj/+aSbD8xCgIOjDoo5VZV/
+/N8CWqNVhRQp+KiRIfuDap73OJDLtaPqzzV3xQD8mv0n+c6zeL+bUl7eWvB4vnhx
+15sSc8yM/4bet7kZHkqlhRoJwzPRTjy56FuiNYrem+PbL1DSDz8NvA5CGJt+AhzU
+a1Zm/sIMYRxSAMPkd2Yc
+=J0Nu
 -----END PGP SIGNATURE-----
