@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/gr-osmosdr
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/gr-osmosdr/ChangeLog,v 1.22 2014/07/25 05:00:25 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/gr-osmosdr/ChangeLog,v 1.23 2014/08/27 01:32:39 zerochaos Exp $
+
+*gr-osmosdr-0.1.2 (27 Aug 2014)
+
+  27 Aug 2014; Rick Farina <zerochaos@gentoo.org> +gr-osmosdr-0.1.2.ebuild,
+  gr-osmosdr-0.1.1.ebuild, gr-osmosdr-9999.ebuild:
+  version bump
 
   25 Jul 2014; Rick Farina <zerochaos@gentoo.org> gr-osmosdr-0.1.1.ebuild,
   gr-osmosdr-9999.ebuild, metadata.xml:
